pages/docs/reference/typescript/v4/durable-endpoints.mdx
import { Info, Callout, CodeGroup, Col, Properties, Property, Row, VersionBadge } from "src/shared/Docs/mdx";

export const description = 'TypeScript SDK reference for Durable Endpoints. Create HTTP handlers with step-based checkpointing, streaming, and automatic recovery.';

# Durable Endpoints <VersionBadge version="Beta" />

Create durable HTTP endpoints using `inngest.endpoint()`. Each step within the handler is checkpointed, allowing automatic recovery from failures.

```ts
import { Inngest, step } from "inngest";
import { endpointAdapter } from "inngest/edge";

const inngest = new Inngest({ id: "my-app", endpointAdapter });

export const handler = inngest.endpoint(async (req: Request): Promise<Response> => {
  const data = await step.run("fetch-data", async () => {
    return await fetchExternalAPI();
  });

  return Response.json({ data });
});
```

---

## Setup

### `endpointAdapter`

The `endpointAdapter` must be passed to the Inngest client constructor to enable Durable Endpoints. Import it from the entry point matching your runtime:

<CodeGroup>
```ts {{ title: "Edge" }}
import { Inngest } from "inngest";
import { endpointAdapter } from "inngest/edge";

const inngest = new Inngest({
  id: "my-app",
  endpointAdapter,
});

```
```ts {{ title: "Node.js" }}
import { Inngest } from "inngest";
import { endpointAdapter } from "inngest/node";

const inngest = new Inngest({
  id: "my-app",
  endpointAdapter,
});
```

</CodeGroup>

<Callout>
  The `endpointAdapter` is required for Durable Endpoints to function. Without it,
  `inngest.endpoint()` will not be available.
</Callout>

### `endpointAdapter.withOptions(options)`

Use `withOptions()` to customize adapter behavior:

```ts
const inngest = new Inngest({
  id: "my-app",
  endpointAdapter: endpointAdapter.withOptions({
    asyncRedirectUrl: "/api/inngest/poll",
    retries: 5,
  }),
});
```

<Row>
  <Col>
    <Properties>
      <Property name="asyncRedirectUrl" type="string | ((params: { runId: string; token: string }) => string | Promise<string>)">
        Custom URL to redirect to when transitioning from sync to async mode. A string path is resolved relative to the request origin and automatically appends `runId` and `token` query parameters. A function gives you full control over URL construction.
      </Property>
      <Property name="functionId" type="string">
        Override the auto-detected function ID for this endpoint. Defaults to `{METHOD} {path}`.
      </Property>
      <Property name="retries" type="number">
        Maximum retries for all steps in this endpoint. Must be between `0` and `20`. Defaults to `3`.
      </Property>
      <Property name="asyncResponse" type='"redirect" | "token"'>
        Response type when transitioning from sync to async mode. Defaults to `"redirect"`.
      </Property>
    </Properties>
  </Col>
</Row>

---

## `inngest.endpoint(handler): Handler`

Creates a durable endpoint handler that can use step primitives for checkpointing.

<Row>
  <Col>
    <Properties>
      <Property name="handler" type="(...args: any[]) => any" required>
        A handler function compatible with the framework you're using. This would be the usual function you use for a request handler before wrapping in `inngest.endpoint()`.

        Within this handler, you can use all step primitives (`step.run()`, `step.sleep()`, `step.waitForEvent()`) for durable execution.
      </Property>
    </Properties>

    **Returns:** A request handler for your framework.
  </Col>
  <Col>
  ```ts
  export const handler = inngest.endpoint(
    async (req: Request): Promise<Response> => {
      const url = new URL(req.url);
      const id = url.searchParams.get("id");

      const result = await step.run("process", async () => {
        return await processItem(id);
      });

      return Response.json({ result });
    }
  );

  ```
  </Col>
</Row>

---

## Available Step Methods

Within a Durable Endpoint handler, you have access to all step methods: see [Available Step Methods](/docs/learn/inngest-steps#available-step-methods).

For example:

### `step.run(id, fn)`

Execute and checkpoint a function. If the endpoint is retried, completed steps return their cached result instantly.

```ts
const user = await step.run("fetch-user", async () => {
  return await db.users.findOne({ id: userId });
});
```

See [step.run() reference](/docs/reference/typescript/v4/functions/step-run) for full documentation.

### `step.sleep(id, duration)`

Pause execution for a specified duration. The endpoint will be resumed after the sleep completes.

```ts
await step.sleep("rate-limit-pause", "30s");
```

See [step.sleep() reference](/docs/reference/typescript/v4/functions/step-sleep) for full documentation.

### `step.waitForEvent(id, options)`

Wait for an external event before continuing. Useful for human-in-the-loop workflows.

```ts
const approval = await step.waitForEvent("wait-for-approval", {
  event: "approval/received",
  match: "data.requestId",
  timeout: "24h",
});
```

See [step.waitForEvent() reference](/docs/reference/typescript/v4/functions/step-wait-for-event) for full documentation.

---

## Passing Data to Endpoints

<Callout variant="warning">
  **POST body is not yet supported.** Use query string parameters to pass data to Durable Endpoints. POST body support is coming soon.
</Callout>

```ts
export const handler = inngest.endpoint(async (req: Request): Promise<Response> => {
  const url = new URL(req.url);

  // Read data from query parameters
  const userId = url.searchParams.get("userId");
  const action = url.searchParams.get("action");

  // Process with durable steps
  const result = await step.run("process", async () => {
    return await processAction(userId, action);
  });

  return Response.json({ result });
});
```

---

## Returning Responses

However you return data in your framework is compatible with Durable Endpoints.

For example, using a regular Web API request:

```ts
// JSON response
return Response.json({ success: true, data: result });

// Text response
return new Response("OK", { status: 200 });

// Error response
return new Response(JSON.stringify({ error: "Not found" }), {
  status: 404,
  headers: { "Content-Type": "application/json" },
});
```

---

## Error Handling

Errors thrown within `step.run()` will trigger automatic retries. Use standard try/catch for custom error handling:

```ts
export const handler = inngest.endpoint(async (req: Request): Promise<Response> => {
  try {
    const result = await step.run("risky-operation", async () => {
      return await riskyAPICall();
    });

    return Response.json({ result });
  } catch (error) {
    // All retries exhausted, handle gracefully
    return Response.json(
      { error: "Operation failed after retries" },
      { status: 500 }
    );
  }
});
```

---

## Framework Integration

Durable Endpoints is only available for Bun and Next.js API endpoints.

[Reach out on Discord](/discord) to ask support for additional frameworks.

---

## Requesting a Durable Endpoint

Durable Endpoints behave like regular API endpoints on the success path. You can request them from your front-end (_or back-end_) using `fetch()` or your favorite query or http library.

When a failure triggers retries or long-running steps like `step.waitForEvent()`
are used, a Durable Endpoint redirects to a separate endpoint that waits for the
call to finish.

By default, this is an endpoint either in the Inngest Dev Server or Inngest
Cloud, depending on which environment you're in, but `inngest.endpointProxy()`
can be used to create your own URL to satisfy CORS constraints when the endpoint
is used from browsers.

```typescript
const inngest = new Inngest({
  id: "my-app",
  endpointAdapter: endpointAdapter.withOptions({
    asyncRedirectUrl: "/wait",
  }),
});

// Create the proxy route with `inngest.endpointProxy()`
Bun.serve({
  port: 3000,
  routes: {
    "/process": ...,
    "/wait": inngest.endpointProxy(),
  },
});
```

Requests will now be redirected to `/wait`.

To stream data to the client during execution, see [Streaming](#streaming) below or the full [Streaming SSE guide](/docs/learn/durable-endpoints/streaming).

---

## Streaming <VersionBadge version="Developer Preview" />

Durable Endpoints can stream data back to clients in real-time using Server-Sent Events (SSE). This lets you stream AI inference tokens, progress updates, or any other data while keeping durability guarantees. If you don't need to stream data directly to an HTTP client, consider using [Realtime](/docs/features/realtime) to push updates via pub/sub channels instead.

For a full guide covering concepts, examples, and rollback semantics, see [Streaming SSE from Durable Endpoints](/docs/learn/durable-endpoints/streaming).

### Server: `stream.push()` and `stream.pipe()`

Import the `stream` object from `inngest/experimental/durable-endpoints` and use it inside your endpoint handler within a [`step.run()`](/docs/reference/typescript/v4/functions/step-run) call:

```ts
import { step } from "inngest";
import { stream } from "inngest/experimental/durable-endpoints";
```

<Row>
  <Col>
    <Properties>
      <Property name="stream.push" type="(data: unknown) => void">
        Send a single chunk of data to the client as an SSE event. Accepts any JSON-serializable value. Does not block execution. No-op outside of an Inngest execution context.
      </Property>
    </Properties>
  </Col>
  <Col>
    ```ts
    await step.run("process", async () => {
      stream.push("Loading...");
      stream.push({ progress: 50 });
      const result = await doWork();
      stream.push("Done!");
      return result;
    });
    ```
  </Col>
</Row>

<Row>
  <Col>
    <Properties>
      <Property name="stream.pipe" type="(source: ReadableStream | AsyncIterable<string> | (() => AsyncIterable<string>)) => Promise<string>">
        Pipe a stream to the client, sending each chunk as an SSE event in real-time. Resolves with the concatenated text of all chunks — it both streams to the client _and_ collects the result for you.

        Accepts three source types:
        - **`ReadableStream`** — piped directly, decoded from bytes to string chunks.
        - **`AsyncIterable<string>`** — each yielded value becomes a chunk.
        - **`() => AsyncIterable<string>`** — a factory function, letting you pass `async function*` generators directly.

        Outside of an Inngest execution context, resolves with an empty string.
      </Property>
    </Properties>
  </Col>
  <Col>
    ```ts
    await step.run("generate", async () => {
      // Pipe a ReadableStream
      const res = await fetch("https://api.example.com/stream");
      const text = await stream.pipe(res.body);

      // Or pipe an async generator
      const text = await stream.pipe(async function* () {
        for await (const event of llmStream) {
          if (event.type === "content_block_delta") {
            yield event.delta.text;
          }
        }
      });
    });
    ```
  </Col>
</Row>

### Client: `fetchWithStream()`

Import from `inngest/experimental/durable-endpoints/client` to consume a streaming Durable Endpoint:

```ts
import { fetchWithStream } from "inngest/experimental/durable-endpoints/client";
```

Returns a `Promise<Response>`. The returned `Response` contains the endpoint's final return value. If the endpoint does not use streaming, the raw `Response` is returned as-is. Sync-to-async redirects are handled automatically.

<Row>
  <Col>
    <Properties>
      <Property name="url" type="string" required>
        The URL of the Durable Endpoint to call.
      </Property>
      <Property name="fetch" type="typeof fetch">
        Custom fetch implementation. Defaults to `globalThis.fetch`.
      </Property>
      <Property name="fetchOpts" type="RequestInit">
        Options passed to the underlying `fetch` call (e.g. `{ signal }` for cancellation).
      </Property>
      <Property name="onMetadata" type="(args: { runId: string }) => void">
        Called when run metadata is received. Always fires first.
      </Property>
      <Property name="onData" type="(args: { data: unknown; hashedStepId: string | null }) => void">
        Called for each streamed chunk. Each `stream.push()` or `stream.pipe()` yield produces one `onData` call. `data` is the deserialized value. Data should be considered uncommitted until `onCommit` fires.
      </Property>
      <Property name="onCommit" type="(args: { hashedStepId: string | null }) => void">
        Called when a step completes successfully. Chunks from that step are now permanent and will never be rolled back.
      </Property>
      <Property name="onRollback" type="(args: { hashedStepId: string | null }) => void">
        Called when a step fails and will retry. Your code is responsible for discarding the uncommitted chunks from that step.
      </Property>
      <Property name="onDone" type="() => void">
        Called when the stream is fully consumed (including on abort or error).
      </Property>
    </Properties>
  </Col>
  <Col>
    ```ts
    const resp = await fetchWithStream("/api/generate", {
      onData: ({ data }) => {
        if (typeof data === "string") {
          console.log("Chunk:", data);
        }
      },
      onCommit: () => {
        // Chunks are permanent
      },
      onRollback: () => {
        // Discard uncommitted chunks
      },
    });

    const result = await resp.text();
    ```
  </Col>
</Row>

---

## Node.js Utilities

The `inngest/node` entry point exports helpers for serving Durable Endpoints in Node.js environments:

```ts
import { serveEndpoint, createEndpointServer } from "inngest/node";
```

<Row>
  <Col>
    <Properties>
      <Property name="serveEndpoint" type="(handler: (req: Request) => Promise<Response>) => http.RequestListener">
        Bridge a Web API endpoint handler to a Node.js `http.RequestListener`. Converts an incoming `http.IncomingMessage` into a Web API `Request`, invokes the handler, then streams the resulting `Response` back through the Node.js `http.ServerResponse`.
      </Property>
      <Property name="createEndpointServer" type="(handler: (req: Request) => Promise<Response>) => http.Server">
        Create an `http.Server` that serves a Durable Endpoint handler directly. A convenience wrapper around `serveEndpoint()`.
      </Property>
    </Properties>
  </Col>
  <Col>
    ```ts
    import { createEndpointServer } from "inngest/node";

    const server = createEndpointServer(
      inngest.endpoint(async (req) => {
        const result = await step.run("work", async () => {
          return await doWork();
        });
        return Response.json({ result });
      })
    );

    server.listen(3000);
    ```
  </Col>
</Row>
